4519
Here is a sample run.  First run has the case X() included, second run does not.

{code}
;scalac -version
Scala compiler version 2.8.0.final -- Copyright 2002-2010, LAMP/EPFL
;scalac test.scala
test.scala:13: error: constructor cannot be instantiated to expected type;
 found   : X
 required: W[Bar]
			case X() => 2
                             ^
one error found
;vi test.scala // Edit file to comment out the check
;scalac test.scala
test.scala:12: warning: match is not exhaustive!
missing combination              X

		w match {
                ^
one warning found
{code}
